tests/negative/symbols/immutable_ident.orng
fn main() -> Int {
    let x = 0
    x = 4
    x
}